--- a/style/style.css
+++ b/style/style.css
@@ -4,11 +4,14 @@ body{
     width: 100%;
     height: 100%;
 }
-
+.carousel-item{
+    
+}
 
 
 .c-item{
     height: 680px;
+    filter: brightness(.7);
 }
 .carousel-caption h2{
     margin-top: 250px;
@@ -401,7 +404,13 @@ footer{
         width: 100%;
         }
         .c-item{
-            height: 680px;
+            height: 50vh;
+        }
+        .c-item h2{
+            text-align: center;
+        }
+        .navbar{
+            position: fixed;
         }
         
 }
