--- a/style/style.css
+++ b/style/style.css
@@ -4,30 +4,25 @@ body{
     width: 100%;
     height: 100%;
 }
-.carousel-item{
-    
+.carousel-caption{
+    margin-top: 350px;
 }
-
-
+.carousel-caption a{
+    text-decoration: none;
+    background-color: white;
+    color: black;
+    padding: 7px 15px;
+    border-radius: 7px;
+}
+.carousel-caption a:hover{
+    background: linear-gradient(red, rgb(117, 2, 2));
+    color: rgb(255, 255, 255);
+}
 .c-item{
     height: 680px;
     filter: brightness(.7);
 }
-.carousel-caption h2{
-    margin-top: 250px;
-}
-.btn:hover{
-    background: linear-gradient(rgb(128, 0, 0), rgb(255, 0, 0));
-    border: none;
-   
-}
-.btn a{
-    text-decoration: none;
-    color: black;
-}
-.btn a:hover{
-    color: white;
-}
+
 .moment{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
