--- a/style/style.css
+++ b/style/style.css
@@ -4,17 +4,20 @@ body{
     width: 100%;
     height: 100%;
 }
-.carousel-caption{
-    margin-top: 350px;
+.container-start{
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    text-align: center;
 }
-.carousel-caption a{
+.container-start a{
     text-decoration: none;
     background-color: white;
     color: black;
     padding: 7px 15px;
     border-radius: 7px;
 }
-.carousel-caption a:hover{
+.container-start a:hover{
     background: linear-gradient(red, rgb(117, 2, 2));
     color: rgb(255, 255, 255);
 }
@@ -293,58 +296,11 @@ footer{
         top: -12px;
         right: 5px;
     }
-    .absolute-btn{
-        display: none;
-    }
-    .package,
-    .package1{
-        border: 1px solid blue;
-        margin: 0 10px;
-        padding: 5px 10px;
-        border-radius: 5px;
-        transition:all .2s ease;
-        margin: 15px;
-    }
-    .package:hover{
-        background: blue;
-        border: none;
-        color: white;
-        border-radius: 5px;
-    }
-    .package1:hover{
-        background: blue;
-        border: none;
-        color: white;
-        border-radius: 5px;
-        box-shadow: 5px 10px 20px;
-        top: -50px;
-       
-    }
     .package1:hover .absolute-btn{
         display: visible;
         top: -12px;
         right: 5px;
         opacity: 0;
-    }
-    .package:hover .link-plan a{
-        background: white;
-        color: black;
-    }
-    .package1:hover .link-plan a{
-        background: white;
-        color: black;
-    }
-    
-    .link-plan a{
-        text-decoration: none;
-        color: white;
-        display: flex;
-        justify-content: center;
-        background: linear-gradient(rgb(128, 0, 0), rgb(255, 0, 0));
-        padding: 5px 7px;
-        margin: 0 50px;
-        border-radius: 5px;
-        font-size: smaller;
     }
     .img-fluid1{
         border-radius: 50%;
@@ -406,7 +362,15 @@ footer{
         .navbar{
             position: fixed;
         }
-        
+        .container-start{
+            position: absolute;
+            top: 30%;
+            left: 0%;
+            text-align: center;
+        }
+        .container-start a{
+            padding: 4px 7px;
+        }
 }
 /* media query for tab start */
 @media screen and (min-width:768px) and (max-width:992px){
