--- a/style/style.css
+++ b/style/style.css
@@ -296,15 +296,7 @@ footer{
         top: -12px;
         right: 5px;
     }
-    .package1:hover .absolute-btn{
-        display: visible;
-        top: -12px;
-        right: 5px;
-        opacity: 0;
-    }
-    .img-fluid1{
-        border-radius: 50%;
-    }
+
     .moment-section{
         width: 100%;
     }
@@ -364,12 +356,17 @@ footer{
         }
         .container-start{
             position: absolute;
-            top: 30%;
+            top: 50%;
             left: 0%;
             text-align: center;
         }
         .container-start a{
             padding: 4px 7px;
+            font-size: smaller;
+            
+        }
+        .container-start .link{
+            margin-top: 20px;
         }
 }
 /* media query for tab start */
@@ -409,6 +406,10 @@ footer{
         .moment-text{
             width: 50vw;
         }
+        .test{
+            margin-left: 0px;
+            border: none;
+        }
         .package-container{
             display: grid;
             grid-template-columns: repeat(2, 1fr);
@@ -416,5 +417,32 @@ footer{
         .clients{
             display: grid;
             grid-template-columns: repeat(2, 1fr);
+        }
+        .container-start{
+            position: absolute;
+            top: 50%;
+            left: 12%;
+            text-align: center;
+        }
+        .container-start a{
+            padding: 4px 7px;
+        }
+        footer{
+            background-color: black;
+            height: 100vh;
+            width: 100%;
+         }
+         .app-store{
+             border: 1px solid white;
+             border-radius: 5px;
+             height: 10vh;
+             width: 50vw;
+             margin-top: 20px;
+         }
+         .footer-info{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
 }
