--- a/style/style.css
+++ b/style/style.css
@@ -70,37 +70,29 @@ body{
     top: -12px;
     right: 5px;
 }
-.absolute-btn{
-    display: none;
-}
 .package,
 .package1{
     border: 1px solid blue;
     margin: 0 10px;
     padding: 5px 10px;
     border-radius: 5px;
-    transition:all .2s ease;
+    transition: .2s ease-in-out;
+    position: relative;
 }
 .package:hover{
     background: blue;
     border: none;
     color: white;
     border-radius: 5px;
+    top: -50px;
 }
 .package1:hover{
     background: blue;
     border: none;
     color: white;
     border-radius: 5px;
-    box-shadow: 5px 10px 20px;
     top: -50px;
-   
-}
-.package1:hover .absolute-btn{
-    display: visible;
-    top: -12px;
-    right: 5px;
-    opacity: 0;
+    
 }
 .package:hover .link-plan a{
     background: white;
