--- a/style/style.css
+++ b/style/style.css
@@ -120,12 +120,13 @@ body{
 .link-plan a{
     text-decoration: none;
     color: white;
-    display: flex;
-    justify-content: center;
     background: linear-gradient(rgb(128, 0, 0), rgb(255, 0, 0));
     padding: 5px 7px;
-    margin: 0 50px;
     border-radius: 5px;
+}
+.link-plan{
+    display: flex;
+    justify-content: center;
 }
 .img-fluid1{
     border-radius: 50%;
@@ -305,7 +306,7 @@ footer{
     .explore-link {
         display: block;
         margin-top: 40px;
-        margin-left: 160px;
+        margin-left: 100px;
     }
     .explore-link a{
         text-decoration: none;
@@ -375,16 +376,27 @@ footer{
         .container-start{
             position: absolute;
             top: 50%;
-            left: 0%;
+            left: 5%;
             text-align: center;
         }
-        .container-start a{
-            padding: 4px 7px;
-            font-size: smaller;
-            
+        .container-start p{
+            padding: 0 10px 0 10px;
+            line-height: 12px;
+            font-size: 12px;
+        }
+        .container-start h1{
+            padding: 0 10px 0 10px;
+            line-height: 25px;
         }
         .container-start .link{
-            margin-top: 20px;
+            margin-top: 12px;
+        }
+        .container-start .link a{
+            font-size: 14px;
+            padding: 5px 7px;
+        }
+        .link-plan{
+           padding: 7px 10px;
         }
 }
 /* media query for tab start */
