--- a/style/style.css
+++ b/style/style.css
@@ -77,8 +77,14 @@ body{
     margin: 0 10px;
     padding: 5px 10px;
     border-radius: 5px;
-    transition: .2s ease-in-out;
     position: relative;
+    
+    transition: .5s ease-in-out;
+}
+.package,
+.package1{
+    transform: translateY(90deg);
+    
 }
 .package:hover{
     background: blue;
