--- a/style/style.css
+++ b/style/style.css
@@ -359,7 +359,7 @@ footer{
     }
     .test{
         margin-left: 0px;
-        border: none;
+        border-left: 5px solid rgb(0, 81, 255);
         position: absolute;
     }
     
@@ -446,7 +446,7 @@ footer{
         }
         .test{
             margin-left: 0px;
-            border: none;
+            border-left: 5px solid rgb(0, 89, 255);
         }
         .package-container{
             display: grid;
